# rank-tracker

./: .env.example  .gitignore  README.md  canary.py  fetcher.py  keywords.csv  main.py  models.py  pyproject.toml  pyrightconfig.json  report.py  requirements.txt  scheduler.py  scoring.py  storage.py
.github/workflows/: test.yml
examples/: com.local.rank-tracker.plist  crontab.example  rank-tracker.service  rank-tracker.timer
tests/: test_all.py
tests/fixtures/: decodo_best_laptop_2026.json  decodo_featured_snippet.json
